Corrige perfis dst

--- a/app/views/dant_requests/show.html.erb
+++ b/app/views/dant_requests/show.html.erb
@@ -3,7 +3,9 @@
   <% if @dant_request.status == "deferido" %>
       <div class="card-panel small white-text green">
       <h3 class="center-align">O Relatório Trimestral foi DEFERIDO.</h3>
-          <h3 class="center-align">Leve a Posição de Estoque e a Guia de Requisição na DANT/ANEXO I para a liberação de insulinas</h3>
+          <h3 class="center-align">Encaminhe a Posição de Estoque atualizada de Insulinas NPH e REGULAR
+            (FRASCOS e CANETAS) e Agulhas juntamente com a Guia de Requisição do Hórus pelo e-mail
+            cronicas.to@gmail.com para a autorização das Insulinas</h3>
       </div>
   <% end %>
 
