--- a/app/views/imunizacao_indications/index.html.erb
+++ b/app/views/imunizacao_indications/index.html.erb
@@ -1,3 +1,4 @@
+<h1 class="center-align">Indicações</h1>
 <div class="card">
   <div class="card-content">
     <span class="card-title grey-text text-darken-4" onclick="toogle_div('#pesquisa')">
