--- a/app/views/dant_requests/show.html.erb
+++ b/app/views/dant_requests/show.html.erb
@@ -5,7 +5,7 @@
       <h3 class="center-align">O Relatório Trimestral foi DEFERIDO.</h3>
           <h3 class="center-align">Encaminhe a Posição de Estoque atualizada de Insulinas NPH e REGULAR
             (FRASCOS e CANETAS) e Agulhas juntamente com a Guia de Requisição do Hórus pelo e-mail
-            cronicas.to@gmail.com para a autorização das Insulinas</h3>
+            cronicas19.to@gmail.com para a autorização das Insulinas</h3>
       </div>
   <% end %>
 
